--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,19 +11,17 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
           </div>
         <hr>
-        <% articles.forEach(article => { %>
+  
             <div class="card">
                 <div class="card-header">
-                    <h2><%= article.title %></h2>
+                   
                 </div>
                 <div class="card-body">
-                    <a href="/<%= article.slug %>" class="btn btn-success">Ler artigo</a>
+                    <a href="#" class="btn btn-success">Saiba mais</a>
                 </div>
             </div>
             <br>
-        <% }) %>
-
-        <div class="row">
+            <div class="row">
             <div class="col col-12">
                 <a style="float:right" href="/articles/page/2">Next >>></a>
             </div>
@@ -31,16 +29,6 @@
         </div>
         <hr>
     </div>
-
-    <% var unidade = { uf: "RJ"} %>
-
-    <select>
-        <option value="RN" <% if(unidade.uf === 'RN') { %> selected <% } %>>RN</option>
-        <option value="RJ" <% if(unidade.uf === 'RJ') { %> selected <% } %>>RJ</option>
-        <option value="RR" <% if(unidade.uf === 'RR') { %> selected <% } %>>RR</option>
-        <option value="RS" <% if(unidade.uf === 'RS') { %> selected <% } %>>RS</option>
-    </select>
-
 </body>
 
 <%- include partials/footer.ejs %>
