Modificação nos arquivos do projeto Hospital Node

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,17 +5,17 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a  class="nav-link" href="/admin/categories">Categorias</a>
+            <a  class="nav-link" href="/admin/categories">Pacientes</a>
         </li>
         <li class="nav-item">
-            <a  class="nav-link" href="/admin/articles">Artigos</a>
+            <a  class="nav-link" href="/admin/articles">Hospitais</a>
         </li>
     </ul>
 
 
     <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a  class="nav-link" href="/logout">Logout</a>
+                <!--<a  class="nav-link" href="/logout">Logout</a>-->
             </li>
     </ul>
 </nav>
