--- a/views/hospitais/list.ejs
+++ b/views/hospitais/list.ejs
@@ -1,4 +1,5 @@
 <%- include('../../partials/header'); -%>
+<%- include('../../partials/navbar'); -%>
 <div class="container">
     <hr>
     <h2>Hospitais</h2>
