Criação de deleção e cadastramento de hosputais

--- a/views/hospitais/edit.ejs
+++ b/views/hospitais/edit.ejs
@@ -1,11 +1,10 @@
-<%- include ../../partials/header.ejs %>
-<%- include ../../partials/navbar.ejs %>
-
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/navbar.ejs') %>
 <div class="container">
     <hr>
     <div class="card"> 
         <div class="card-header">
-            <h2>Edição de hospital</h2>
+            <h2>Teste</h2>
         </div>
         <div class="card-body">
             <form method="POST" action="/hospitais/update">
@@ -23,5 +22,4 @@
         </div>
     </div>
 </div>
-
-<%- include ../../partials/footer.ejs %>
+<%- include('../partials/footer.ejs') %>
