--- a/views/hospitais/index.ejs
+++ b/views/hospitais/index.ejs
@@ -1,5 +1,5 @@
-<%- include partials/header.ejs %>
-<%- include partials/homenavbar.ejs %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/navbar.ejs') %>
 <body>
     <div class="container">
         <hr>
@@ -11,8 +11,7 @@
             <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
           </div>
         <hr>
-  
-            <div class="card">
+          <div class="card">
                 <div class="card-header">
                    
                 </div>
@@ -30,5 +29,5 @@
         <hr>
     </div>
 </body>
+<%- include('../partials/footer.ejs') %>
 
-<%- include partials/footer.ejs %>
