--- a/views/hospitais/new.ejs
+++ b/views/hospitais/new.ejs
@@ -1,32 +1,57 @@
-<%- include ../../partials/header.ejs %>
-<%- include ../../partials/navbar.ejs %>
-
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/navbar.ejs') %>
 <div class="container">
     <hr>
     <div class="card"> 
         <div class="card-header">
-            <h2>Cadastro de Hospital</h2>
+            <h2 class="text-center">Cadastro de Hospital</h2>
         </div>
         <div class="card-body">
              
-            <form method="POST" action="/admin/hospitais/save">
-              
+    <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" name="nome" placeholder="Nome">
+    </div>
+    <div class="col">
+      <input type="number" class="form-control" name="cnpj" placeholder="CNPJ">
+    </div>
+  </div><br>
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" name="endereco" placeholder="Endereco">
+    </div>
+    <div class="col">
+      <input type="number" class="form-control" name="numero" placeholder="Número">
+    </div>
+  </div><br>
+   <div class="row">
+    <div class="col">
+       <input class="form-control" type="text" name="complemento" placeholder="Complemento">
+       
+    </div>
+    <div class="col">
+      <input class="form-control" type="number" name="cep" placeholder="CEP">
+    </div>
+  </div><br>
+  <div class="row">
+    <div class="col">
+     <input class="form-control" type="text" name="bairro" placeholder="Bairro">
+       
+    </div>
+    <div class="col">
+      <input class="form-control" type="text" name="cidade" placeholder="Cidade">
+    </div>
+  </div><br>
+  <input class="form-control" type="text" name="uf" placeholder="Estado (UF)"><br>
+  <button class="btn btn-success btn-block">Cadastrar</button>
+</form>
 
-                <input class="form-control" type="text" name="nome" placeholder="Defina o nome do hospital"><br>
-                <input class="form-control" type="number" name="cnpj" placeholder="Defina o cnpj do hospital"><br>
-                <input class="form-control" type="text" name="endereco" placeholder="Defina o endereco do hospital"><br>
-                <input class="form-control" type="number" name="numero" placeholder="Defina o número do hospital"><br>
-                <input class="form-control" type="text" name="complemento" placeholder="Defina o complemento do endereço do hospital"><br>
-                <input class="form-control" type="text" name="bairro" placeholder="Defina o nome do bairro do hospital"><br>
-                <input class="form-control" type="text" name="cidade" placeholder="Defina a cidade do hospitla"><br>
-                <input class="form-control" type="text" name="uf" placeholder="Defina o estado (UF) do hospital"><br>
-                <input type="hidden" name="id" value="<%= hospital.id %>">
-                <button class="btn btn-success">Cadastrar</button>
 
-            
-            </form>
+
+
+         </form>
         </div>
     </div>
 </div>
+<%- include('../partials/footer.ejs') %>
 
-<%- include ../../partials/footer.ejs %>
