--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,10 +5,10 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a  class="nav-link" href="/admin/categories">Pacientes</a>
+            <a  class="nav-link" href="#">Pacientes</a>
         </li>
         <li class="nav-item">
-            <a  class="nav-link" href="/admin/articles">Hospitais</a>
+            <a  class="nav-link" href="/hospitais/listar">Hospitais</a>
         </li>
     </ul>
 
