--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a  class="nav-link" href="#">Pacientes</a>
+            <a  class="nav-link" href="/pacientes/listar">Pacientes</a>
         </li>
         <li class="nav-item">
             <a  class="nav-link" href="/hospitais/listar">Hospitais</a>
