--- a/views/hospitais/index.ejs
+++ b/views/hospitais/index.ejs
@@ -8,26 +8,35 @@
             <p class="lead">Este é um simples projeto em Node JS.</p>
             <hr class="my-4">
             <p>Descrição detalhada aqui!</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Leia mais</a>
-          </div>
-        <hr>
-          <div class="card">
-                <div class="card-header">
-                   
-                </div>
-                <div class="card-body">
-                    <a href="#" class="btn btn-success">Saiba mais</a>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-            <div class="col col-12">
-                <a style="float:right" href="/articles/page/2">Next >>></a>
-            </div>
-            <hr>
-        </div>
-        <hr>
+            <!--<a class="btn btn-success" href="#" role="button">Leia mais</a>-->
+            <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalScrollable">
+  Saiba mais
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalScrollableTitle">Descrição do Projeto</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>O Node Hospital é um projeto simples que foi criado para 
+        poder estudar</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+      </div>
     </div>
-</body>
+  </div>
+</div>
+          </div>
+         </div>
+    </body>
 <%- include('../partials/footer.ejs') %>
 
