--- a/views/consultas/list.ejs
+++ b/views/consultas/list.ejs
@@ -2,33 +2,52 @@
 <%- include('../partials/navbar.ejs') %>
 <div class="container-lg">
     <hr>
-    <h2 class="text-center">Pacientes cadastrados</h2>
-    <a class="btn btn-success ml-3" href="/pacientes/cadastrar">Cadastrar um novo paciente</a>
+    <h2 class="text-center"> Hospitais cadastrados</h2>
+    <a class="btn btn-success ml-3" href="/hospitais/cadastrar">Cadastrar um novo hospital</a>
     <hr>
     <table class="table table-striped ">
         <thead>
             <tr>
                 <th>ID:</th>
                 <th>Nome:</th>
-                <th>Hospital</th>
-                <th>Data</th>
-                <th>Status</th>
-                <th>Ações</th>
+                 <th>CEP:</th>
+                <th>CNPJ:</th>
+                <th>Endereço:</th>
+                <th>Número:</th>
+                <th>Complemento:</th>
+                <th>Bairro:</th>
+                 <th>Cidade:</th>
+                 <th>UF:</th>
+                 <th>Ações</th>
                  
             </tr>
         </thead>
         <tbody>
-            <% consuttas.forEach(consulta => { %>
+            <% hospitais.forEach(hospital => { %>
                 <tr>
                 
-                    <th><%= consulta.id %></th>
-                    <th><%= consulta.pacientes.nome %></th>
-                    <th><%= consulta.hospitais %></th>
-                    <th><%= consulta.dtconsulta %></th>
-                    <th><%= consulta.status %></th>
-                    
+                    <th><%= hospital.id %></th>
+                    <th><%= hospital.nome %></th>
+                    <th><%= hospital.cep %></th>
+                    <th><%= hospital.cnpj %></th>
+                    <th><%= hospital.endereco %></th>
+                    <th><%= hospital.numero %></th>
+                    <th><%= hospital.complemento %></th>
+                    <th><%= hospital.bairro %></th>
+                    <th><%= hospital.cidade %></th>
+                    <th><%= hospital.uf %></th>
                     <th>
-                
+         
+                        <a href="/hospitais/editar/<%= hospital.id %>" class="btn btn-warning">Editar</a>
+                        
+                        <form method="POST" action="/hospitais/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)">
+                            <input type="hidden" name="id" value="<%= hospital.id %>">
+                            <button class="btn btn-danger">Deletar</button>
+                        </form>
+                    
+                    </th>
+                    </tr>
+            <% }) %>
         </tbody>
         </table>
     </div>
