--- a/views/hospitais/index.ejs
+++ b/views/hospitais/index.ejs
@@ -19,17 +19,20 @@
   <div class="modal-dialog modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalScrollableTitle">Descrição do Projeto</h5>
+        <h5 class="modal-title" id="exampleModalScrollableTitle">Hospital Node</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>O Node Hospital é um projeto simples que foi criado para 
-        poder estudar</p>
+        <p>O Hospital Node é um projeto simples que foi criado para 
+        identificar e classificar pacientes que chegam a um hospital e sejam possíveis
+        portadores do vírus COVID-19.</p>
+        <p>Este projeto ainda tem como objetivo possibilitar o estudo desta tecnlogia utilizando
+        as prncipais dependências do Node JS  e banco de dados Mysql.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
         <!--<button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
