Finalização da logica de Login Session e Autenticação

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,6 +10,10 @@
         <li class="nav-item">
             <a  class="nav-link" href="/hospitais/listar">Hospitais</a>
         </li>
+
+        <li class="nav-item">
+            <a  class="nav-link" href="/consultas/listar">Consultas</a>
+        </li>
     </ul>
 
 
