--- a/views/admin/users/create.ejs
+++ b/views/admin/users/create.ejs
@@ -1,7 +1,5 @@
 <%- include ../../partials/header.ejs %>
 <%- include ../../partials/navbar.ejs %>
-
-
 <div class="container">
     <hr> 
     <div class="card mt-5">
@@ -9,7 +7,7 @@
             <h2>Criação de usuário</h2>
         </div>
         <div class="card-body">
-            <form action="/users/create" method="POST">
+            <form action="/users/create" method="post">
                 <input class="form-control" name="email" type="email" placeholder="email@exemplo.com"><br>
                 <input class="form-control" name="password" type="password" placeholder="******"><br>
                 <button type="submit" class="btn btn-success btn-block">Criar</button>
