--- a/views/hospitais/index.ejs
+++ b/views/hospitais/index.ejs
@@ -29,7 +29,7 @@
         identificar e classificar pacientes que chegam a um hospital e sejam possíveis
         portadores do vírus COVID-19.</p>
         <p>Este projeto ainda tem como objetivo possibilitar o estudo desta tecnlogia utilizando
-        as prncipais dependências do Node JS  e banco de dados Mysql.</p>
+        as principais dependências do Node JS  e banco de dados Mysql.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-success" data-dismiss="modal">Fechar</button>
