--- a/views/consultas/edit.ejs
+++ b/views/consultas/edit.ejs
@@ -7,8 +7,7 @@
 			<h2 class="text-center">Atualização de Consulta</h2>
 		</div>
 		<div class="card-body">
-			
-				<div class="row">
+			        <div class="row">
 					<div class="col">
 						<label>Nome do paciente:</label> 
 						<select name="pacientes" class="form-control"> 
@@ -39,7 +38,7 @@
 						</select><br>
 					</div>
 				</div>
-				<button class="btn btn-success btn-block">Registrar</button>
+				<button class="btn btn-success btn-block">Atualizar</button>
 			</form>
 		</div>
 	</div>
