--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,7 +19,7 @@
 
     <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <!--<a  class="nav-link" href="/logout">Logout</a>-->
+                <a  class="nav-link" href="/logout">Logout</a>
             </li>
     </ul>
 </nav>
