--- a/views/hospitais/list.ejs
+++ b/views/hospitais/list.ejs
@@ -1,11 +1,9 @@
 <%- include('../partials/header.ejs') %>
 <%- include('../partials/navbar.ejs') %>
-<div class="container-lg">
-    <hr>
+<div class="container-lg mt-4">
     <h2 class="text-center"> Hospitais cadastrados</h2>
     <a class="btn btn-success ml-3" href="/hospitais/cadastrar">Cadastrar um novo hospital</a>
-    <hr>
-    <table class="table table-striped ">
+    <table class="table table-responsive{-sm|-md|-lg|-xl} mt-5">
         <thead>
             <tr>
                 <th>ID:</th>
