--- a/views/pacientes/list.ejs
+++ b/views/pacientes/list.ejs
@@ -1,11 +1,11 @@
 <%- include('../partials/header.ejs') %>
 <%- include('../partials/navbar.ejs') %>
 <div class="container-lg">
-    <hr>
-    <h2 class="text-center">Pacientes cadastrados</h2>
+    
+    <h2 class="text-center mt-4">Pacientes cadastrados</h2>
     <a class="btn btn-success ml-3" href="/pacientes/cadastrar">Cadastrar um novo paciente</a>
-    <hr>
-    <table class="table table-striped ">
+    
+    <table class=" ml-3 table table-responsive{-sm|-md|-lg|-xl} mt-5">
         <thead>
             <tr>
                 <th>ID:</th>
