--- a/views/admin/users/index.ejs
+++ b/views/admin/users/index.ejs
@@ -11,6 +11,7 @@
                 <tr>
                     <th>Id</th>
                     <th>Email</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
@@ -18,12 +19,23 @@
                     <tr>
                         <td><%= user.id %></td>
                         <td><%= user.email %></td>
+                        <td> <a href="/users/editar/<%= user.id %>" class="btn btn-warning">Editar</a>
+                        <form method="POST" action="/users/delete" style="display: inline;" onsubmit="confirmarDelecao(event, this)">
+                            <input type="hidden" name="id" value="<%= user.id %>">
+                            <button class="btn btn-danger">Deletar</button>
+                        </form></td>
                     </tr>
                 <% }) %>
             </tbody>
         </table>
-</div>
-
-
-
+        </div>
+<script>
+    function confirmarDelecao(event, form){
+        event.preventDefault();
+        var decision = confirm("Você quer deletar esta categoria?");
+        if(decision){
+            form.submit();
+        }
+    }
+</script>
 <%- include ../../partials/footer.ejs %>
