--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,10 @@
         <li class="nav-item">
             <a  class="nav-link" href="/consultas/listar">Consultas</a>
         </li>
+
+         <li class="nav-item">
+            <a  class="nav-link" href="/admin/users">Usuários</a>
+        </li>
     </ul>
 
 
@@ -23,3 +27,6 @@
             </li>
     </ul>
 </nav>
+
+
+
